@@ -108,10 +108,10 @@ names in the documentation coverage report.
 
 == Bugs
 
-See DEVELOPERS@Bugs for information on filing a bug report.  It's OK to file a
-bug report for anything you're having a problem with.  If you can't figure out
-how to make RDoc produce the output you like that is probably a documentation
-bug.
+See CONTRIBUTING@Bugs for information on filing a bug report.  It's OK to file
+a bug report for anything you're having a problem with.  If you can't figure
+out how to make RDoc produce the output you like that is probably a
+documentation bug.
 
 == License
 
